--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title OurBlog
+    %title todolist
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
@@ -10,11 +10,11 @@
   %body
     %header.header
       .header__title
-        = link_to "Our Blog", root_path, class: "header__title--text"
+        = link_to "やる事リスト", root_path, class: "header__title--text"
       .header__right
         - if user_signed_in?
           = link_to current_user.nickname, user_path(current_user), class: "header__right--btn"
-          = link_to "新規投稿", new_post_path, class: "header__right--btn"
+          = link_to "新規投稿", new_event_path, class: "header__right--btn"
           = link_to "ログアウト", destroy_user_session_path, method: :delete, class: "header__right--btn"
         - else
           = link_to "ログイン", new_user_session_path, class: "header__right--btn"
