--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,28 +1,31 @@
 body{
   background-color: #f6f6f6;
   min-width: 650px;
+  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
   .header{
     height: 56px;
-    width: 100%;
+    width: 70%;
     padding: 0 150px;
-    background-color: #55c500;
-    color: #fff;
+    background-color: #eeeeee;
+    color: #333333;
     display: flex;
+    margin: 0 auto;
     justify-content: space-between;
     &__title{
+      margin: 0 auto;
       font-size: 30px;
       line-height: 56px;
       &--text{
         text-decoration: none;
-        color: #fff;
+        color: #333333;
       }
     }
     &__right{
       &--btn{
         text-decoration: none;
         line-height: 56px;
-        color: #fff;
         margin-left:15px;
+        color: #333333;
       }
     }
   }
