--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,5 @@
 .postTitle
   = @user.nickname
   さんの投稿一覧
-- @posts.each do |post|
-  = render partial: "posts/post", locals: { post: post }
+- @events.each do |event|
+  = render partial: "events/event", locals: { event: event }
